Fixed spacing issues

--- a/src/pages/about/style.css
+++ b/src/pages/about/style.css
@@ -28,7 +28,7 @@
 .flag-image {
   width: 48px;       
   height: auto;
-  margin-left: 200px; 
+  margin-left: 160px; 
   vertical-align: middle;
 }
 
